# AgentForge

./: .env.example  .gitignore  AgentForge_项目设计文档_v1.1.md  CLAUDE.md  LICENSE  README.md  README_EN.md  docker-compose.yml  pyproject.toml
docs/: agentforge-architecture-guide.md  external-review-2026-06-26.md  fix-workspace-retry-eval-feedback-2026-06-26.md  project-execution-plan.md  project-review-2026-06-24.md  review_e2e_2026-06-26.md  validation-test-report-2026-06-26.md
scripts/: codegraph-sync.sh
src/: config.py  logging_config.py  main.py
src/agents/: base.py  evaluator.py  generator.py  planner.py
src/agents/prompts/: evaluator.py  generator.py  planner.py
src/api/: task_manager.py
src/api/routes/: health.py  tasks.py
src/api/schemas/: evaluation.py  task.py
src/harness/: workspace.py
src/harness/evaluation/: ragas.py  (+3 more)
src/llm/: client.py
src/retrieval/: chunking.py  embeddings.py  indexer.py  search.py
src/storage/: cache.py  vector.py
src/tools/: code_ops.py  file_ops.py  registry.py  retrieval_ops.py  test_ops.py
src/utils/: json_extract.py
src/workflow/: edges.py  graph.py  state.py
tests/e2e/: test_real_deepseek.py
tests/integration/: conftest.py  test_api_tasks.py  test_e2e_tag.py  test_real_tools.py
tests/unit/: test_chunking.py  test_edges.py  test_hooks.py  test_loop_controller.py  test_state.py  test_workspace.py
tests/validation/: test_report_issues.py
toy-repo/: CONVENTIONS.md  pyproject.toml
toy-repo/src/: config.py  database.py  exceptions.py  main.py
toy-repo/tests/: conftest.py  test_note.py  test_user.py
(+20 files in other folders)
